--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="cupertino_pride"
         android:icon="@mipmap/ic_launcher">
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD79vIScpgXQtAcds4FwkEB27t1SFnnlik"/>
+
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
