--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_auth: ^0.16.0
   google_sign_in: ^4.4.4
+  google_maps_flutter: ^0.5.27+3
 
 dev_dependencies:
   flutter_test:
