--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^5.0.2
   path_provider: ^0.4.1
   open_file: ^3.0.1
+  cloud_firestore: ^0.13.0+1
 
 dev_dependencies:
   flutter_test:
